--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -6,6 +6,10 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<p>
+    <a asp-action="Create" class="btn btn-outline-dark">Create New</a>
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="success">
@@ -44,7 +48,7 @@
                 <td>
                     <a asp-action="Edit" asp-host-id="@item.Id">Edit</a>
                     <a asp-action="Details" asp-host-id="@item.Id">Details</a>
-                    <a asp-action="Delete" asp-host-id="@item.Id">Delete</a>
+                    <a asp-action="Delete" asp-host-id="@item.Id">Delete</a> 
                 </td>
             </tr>
         }
